[ADD] href in carte

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <nav class="nav_header">
             <img class="logo" src="images/logo/Booki.png">
             <div>
-                <a href="hébergement.html">Hébergements</a>
-                <a href="activités.html">Activités</a>
+                <a class="link" href="hébergement.html">Hébergements</a>
+                <a class="link" href="activités.html">Activités</a>
             </div>
         </nav>
         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
@@ -62,78 +62,90 @@
             <div class="div_heb">
                 <h1 class="title">Hébergements à Marseille</h1>
                 <ul class="carte">
-                    <li class="heb">
-                        <img class="hebergement" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
-                        <div class="écrit_carte">
-                            <h2 class="h2_heb">Auberge La Canebière</h2>
-                            <h3 class="h3_heb">Nuit à partir de 25€</h3>
-                            <i class="first fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="grey_star fa-solid fa-star"></i>
-                        </div>
-                    </li>
-                    <li class="heb">
-                        <img class="hebergement" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
-                        <div class="écrit_carte">
-                            <h2 class="h2_heb">Hôtel du Port</h2>
-                            <h3 class="h3_heb">Nuit à partir de 52€</h3>
-                            <i class="first fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="grey_star fa-solid fa-star"></i>
-                        </div>
-                    </li>
-                    <li class="heb">
-                        <img class="hebergement" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg">
-                        <div class="écrit_carte">
-                            <h2 class="h2_heb">Hôtel Les mouettes</h2>
-                            <h3 class="h3_heb">Nuit à partir de 76€</h3>
-                            <i class="first fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="grey_star fa-solid fa-star"></i>
-                        </div>
-                    </li>
-                    <li class="heb">
-                        <img class="hebergement" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
-                        <div class="écrit_carte">
-                            <h2 class="h2_heb">Hôtel de la mer</h2>
-                            <h3 class="h3_heb">Nuit à partir de 45€</h3>
-                            <i class="first fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="grey_star fa-solid fa-star"></i>
-                        </div>
-                    </li>
-                    <li class="heb">
-                        <img class="hebergement" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
-                        <div class="écrit_carte">
-                            <h2 class="h2_heb">Auberge Le Panier</h2>
-                            <h3 class="h3_heb">Nuit à partir de 23€</h3>
-                            <i class="first fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="grey_star fa-solid fa-star"></i>
-                        </div>
-                    </li>
-                    <li class="heb">
-                        <img class="hebergement" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
-                        <div class="écrit_carte">
-                            <h2 class="h2_heb">Hôtel Chez Amina</h2>
-                            <h3 class="h3_heb">Nuit à partir de 96€</h3>
-                            <i class="first fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="grey_star fa-solid fa-star"></i>
-                        </div>
-                    </li>
+                    <a class="a_heb" href="#">
+                        <li class="heb">
+                            <img class="hebergement" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
+                            <div class="écrit_carte">
+                                <h2 class="h2_heb">Auberge La Canebière</h2>
+                                <h3 class="h3_heb">Nuit à partir de 25€</h3>
+                                <i class="first fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="grey_star fa-solid fa-star"></i>
+                            </div>
+                        </li>
+                    </a>
+                    <a class="a_heb" href="#">
+                        <li class="heb">
+                            <img class="hebergement" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
+                            <div class="écrit_carte">
+                                <h2 class="h2_heb">Hôtel du Port</h2>
+                                <h3 class="h3_heb">Nuit à partir de 52€</h3>
+                                <i class="first fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="grey_star fa-solid fa-star"></i>
+                            </div>
+                        </li>
+                    </a>
+                    <a class="a_heb" href="#">
+                        <li class="heb">
+                            <img class="hebergement" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg">
+                            <div class="écrit_carte">
+                                <h2 class="h2_heb">Hôtel Les mouettes</h2>
+                                <h3 class="h3_heb">Nuit à partir de 76€</h3>
+                                <i class="first fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="grey_star fa-solid fa-star"></i>
+                            </div>
+                        </li>
+                    </a>
+                    <a class="a_heb" href="#">
+                        <li class="heb">
+                            <img class="hebergement" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
+                            <div class="écrit_carte">
+                                <h2 class="h2_heb">Hôtel de la mer</h2>
+                                <h3 class="h3_heb">Nuit à partir de 45€</h3>
+                                <i class="first fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="grey_star fa-solid fa-star"></i>
+                            </div>
+                        </li>
+                    </a>
+                    <a class="a_heb" href="#">
+                        <li class="heb">
+                            <img class="hebergement" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
+                            <div class="écrit_carte">
+                                <h2 class="h2_heb">Auberge Le Panier</h2>
+                                <h3 class="h3_heb">Nuit à partir de 23€</h3>
+                                <i class="first fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="grey_star fa-solid fa-star"></i>
+                            </div>
+                        </li>
+                    </a>
+                    <a class="a_heb" href="#">
+                        <li class="heb">
+                            <img class="hebergement" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
+                            <div class="écrit_carte">
+                                <h2 class="h2_heb">Hôtel Chez Amina</h2>
+                                <h3 class="h3_heb">Nuit à partir de 96€</h3>
+                                <i class="first fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="grey_star fa-solid fa-star"></i>
+                            </div>
+                        </li>
+                    </a>
                     <h3>Afficher plus</h3>
                 </ul>
             </div>
@@ -143,70 +155,84 @@
                     <i class="fa-solid fa-chart-line"></i>
                 </div>
                 <ul class="carte_pop">
-                    <li class="li_pop">
-                        <img class="pop" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
-                        <div class="content">
-                            <h2 class="h2_pop">Hôtel Le soleil du matin</h2>
-                            <h3 class="h3_pop">Nuit à partir de 126€</h3>
-                            <div class="star">
-                                <i class="first fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="grey_star fa-solid fa-star"></i>
+                    <a class="a_pop" href="#">
+                        <li class="li_pop">
+                            <img class="pop" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
+                            <div class="content">
+                                <h2 class="h2_pop">Hôtel Le soleil du matin</h2>
+                                <h3 class="h3_pop">Nuit à partir de 126€</h3>
+                                <div class="star">
+                                    <i class="first fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="grey_star fa-solid fa-star"></i>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li class="li_pop">
-                        <img class="pop" src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg">
-                        <div class="content">
-                            <h2 class="h2_pop">Chambres d'hôtes Au coeur de l'eau</h2>
-                            <h3 class="h3_pop">Nuit à partir de 71€</h3>
-                            <div class="star">
-                                <i class="first fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="grey_star fa-solid fa-star"></i>
+                        </li>
+                    </a>
+                    <a class="a_pop" href="#">
+                        <li class="li_pop">
+                            <img class="pop" src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg">
+                            <div class="content">
+                                <h2 class="h2_pop">Chambres d'hôtes Au coeur de l'eau</h2>
+                                <h3 class="h3_pop">Nuit à partir de 71€</h3>
+                                <div class="star">
+                                    <i class="first fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="grey_star fa-solid fa-star"></i>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li class="li_pop">
-                        <img class="pop" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
-                        <div class="content">
-                            <h2 class="h2_pop">Hôtel Bleu et Blanc</h2>
-                            <h3 class="h3_pop">Nuit à partir de 68€</h3>
-                            <div class="star">
-                                <i class="first fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="grey_star fa-solid fa-star"></i>
+                        </li>
+                    </a>
+                    <a class="a_pop" href="#">
+                        <li class="li_pop">
+                            <img class="pop" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
+                            <div class="content">
+                                <h2 class="h2_pop">Hôtel Bleu et Blanc</h2>
+                                <h3 class="h3_pop">Nuit à partir de 68€</h3>
+                                <div class="star">
+                                    <i class="first fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="grey_star fa-solid fa-star"></i>
+                                </div>
                             </div>
-                        </div>
-                    </li>
+                        </li>
+                    </a>
                 </ul>
             </div>
         </div>
         <section>
             <h1 class="title">Activités à Marseille</h1>
             <ul class="act">
-                <li class="li_act">
-                    <img class="img_act" src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
-                    <h2 class="h2_act">Vieux-Port</h2>
-                </li>
-                <li class="li_act">
-                    <img class="img_act" src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg">
-                    <h2 class="h2_act">Fort de Pomègues</h2>
-                </li>
-                <li class="li_act">
-                    <img class="img_act" src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg">
-                    <h2 class="h2_act">Parc national des Calanques</h2>
-                </li>
-                <li class="li_act">
-                    <img class="img_act" src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg">
-                    <h2 class="h2_act">Notre-Dame-de-la-Garde</h2>
-                </li>
+                <a class="a_act" href="#">
+                    <li class="li_act">
+                        <img class="img_act" src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
+                        <h2 class="h2_act">Vieux-Port</h2>
+                    </li>
+                </a>
+                <a class="a_act" href="#">
+                    <li class="li_act">
+                        <img class="img_act" src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg">
+                        <h2 class="h2_act">Fort de Pomègues</h2>
+                    </li>
+                </a>
+                <a class="a_act" href="#">
+                    <li class="li_act">
+                        <img class="img_act" src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg">
+                        <h2 class="h2_act">Parc national des Calanques</h2>
+                    </li>
+                </a>
+                <a class="a_act" href="#">
+                    <li class="li_act">
+                        <img class="img_act" src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg">
+                        <h2 class="h2_act">Notre-Dame-de-la-Garde</h2>
+                    </li>
+                </a>
             </ul>
         </section>
     </main>
