[ADD] beggin of mobile version

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <header>
         <nav class="nav_header">
             <img class="logo" src="images/logo/Booki.png">
-            <div>
-                <a class="link" href="hébergement.html">Hébergements</a>
-                <a class="link" href="activités.html">Activités</a>
+            <div class="but_head">
+                <a class="link_one" href="hébergement.html">Hébergements</a>
+                <a class="link_two" href="activités.html">Activités</a>
             </div>
         </nav>
-        <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-        <h2>En plein centre-ville ou en pleine nature</h2>
+        <h1 class="title">Trouvez votre hébergement pour des vacances de rêve</h1>
+        <h2 class="s_title">En plein centre-ville ou en pleine nature</h2>
         <form>
             <div class="icon">
                 <i class="fas fa-map-marker-alt"></i>
