--- a/index.html
+++ b/index.html
@@ -62,20 +62,22 @@
             <div class="div_heb">
                 <h1 class="title">Hébergements à Marseille</h1>
                 <ul class="carte">
-                    <a class="a_heb" href="#">
-                        <li class="heb">
-                            <img class="hebergement" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
-                            <div class="écrit_carte">
-                                <h2 class="h2_heb">Auberge La Canebière</h2>
-                                <h3 class="h3_heb">Nuit à partir de 25€</h3>
-                                <i class="first fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="grey_star fa-solid fa-star"></i>
-                            </div>
-                        </li>
-                    </a>
+                    <li>
+                        <a class="a_heb" href="#">
+                            <article class="heb">
+                                <img class="hebergement" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
+                                <div class="écrit_carte">
+                                    <h2 class="h2_heb">Auberge La Canebière</h2>
+                                    <h3 class="h3_heb">Nuit à partir de 25€</h3>
+                                    <i class="first fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="grey_star fa-solid fa-star"></i>
+                                </div>
+                            </article>
+                        </a>
+                    </li>
                     <a class="a_heb" href="#">
                         <li class="heb">
                             <img class="hebergement" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
@@ -156,19 +158,21 @@
                 </div>
                 <ul class="carte_pop">
                     <a class="a_pop" href="#">
-                        <li class="li_pop">
-                            <img class="pop" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
-                            <div class="content">
-                                <h2 class="h2_pop">Hôtel Le soleil du matin</h2>
-                                <h3 class="h3_pop">Nuit à partir de 126€</h3>
-                                <div class="star">
-                                    <i class="first fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="grey_star fa-solid fa-star"></i>
+                        <li>
+                            <article class="li_pop">
+                                <img class="pop" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
+                                <div class="content">
+                                    <h2 class="h2_pop">Hôtel Le soleil du matin</h2>
+                                    <h3 class="h3_pop">Nuit à partir de 126€</h3>
+                                    <div class="star">
+                                        <i class="first fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="grey_star fa-solid fa-star"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                     </a>
                     <a class="a_pop" href="#">
@@ -210,9 +214,11 @@
             <h1 class="title">Activités à Marseille</h1>
             <ul class="act">
                 <a class="a_act" href="#">
-                    <li class="li_act">
-                        <img class="img_act" src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
-                        <h2 class="h2_act">Vieux-Port</h2>
+                    <li>
+                        <article class="li_act">
+                            <img class="img_act" src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
+                            <h2 class="h2_act">Vieux-Port</h2>
+                        </article>
                     </li>
                 </a>
                 <a class="a_act" href="#">
