[ADD] hover in desktop and tablette version

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="nav_header">
             <img class="logo" alt="logo booki" src="images/logo/Booki.png">
             <div class="but_head">
-                <a class="link_one" href="hébergement.html">Hébergements</a>
+                <a class="link_one" href=".div_heb">Hébergements</a>
                 <a class="link_two" href="activités.html">Activités</a>
             </div>
         </nav>
