[ADD] modif in mobile version

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <nav class="nav_header">
             <img class="logo" alt="logo booki" src="images/logo/Booki.png">
             <div class="but_head">
-                <a class="link_one" href="#hebergement">Hébergements</a>
-                <a class="link_two" href="#activite">Activités</a>
+                <a class="link_one" href="#hebergement"> <span>Hébergements</span></a>
+                <a class="link_two" href="#activite"> <span>Activités</span></a>
             </div>
         </nav>
         <h1 class="title">Trouvez votre hébergement pour des vacances de rêve</h1>
@@ -63,7 +63,7 @@
         <div class="div_heb_pop">
             <section id="hebergement">
                 <div class="div_heb">
-                    <h2 class="title">Hébergements à Marseille</h2>
+                    <h2 id="inside" class="title">Hébergements à Marseille</h2>
                     <ul class="carte">
                         <li class="li_heb">
                             <a class="a_heb" href="#">
@@ -170,7 +170,7 @@
             <section>
                 <div class="div_pop">
                     <div class="div_title">
-                        <h2 class="title">Les plus populaires</h2>
+                        <h2 id="inside" class="title">Les plus populaires</h2>
                         <i class="fa-solid fa-chart-line"></i>
                     </div>
                     <ul class="carte_pop">
