--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
             <div class="icon">
                 <i class="fas fa-map-marker-alt"></i>
             </div>
-            <input type="search" placeholder="Marseille, France">
+            <input class="input" type="search" placeholder="Marseille, France">
             <button>
-                Rechercher
+                <i class="fa fa-magnifying-glass" id="search_icon"></i>
+                <p class="search">Rechercher</p>
             </button>
         </form>
         <div class="filtres">
