--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                 <i class="fas fa-map-marker-alt"></i>
             </div>
             <input class="input" type="search" placeholder="Marseille, France">
-            <button>
-                <i class="fa fa-magnifying-glass" id="search_icon"></i>
-                <p class="search">Rechercher</p>
+            <button class="search">
+                Rechercher
             </button>
+            <i class="fa fa-magnifying-glass" id="search_icon"></i>
         </form>
         <div class="filtres">
             <p class="h3_f">Filtres</p>
@@ -64,7 +64,7 @@
         <div class="div_heb_pop">
             <section id="hebergement">
                 <div class="div_heb">
-                    <h2 id="inside" class="title">Hébergements à Marseille</h2>
+                    <h2 class="inside title">Hébergements à Marseille</h2>
                     <ul class="carte">
                         <li class="li_heb">
                             <a class="a_heb" href="#">
@@ -171,7 +171,7 @@
             <section>
                 <div class="div_pop">
                     <div class="div_title">
-                        <h2 id="inside" class="title">Les plus populaires</h2>
+                        <h2 class="inside title">Les plus populaires</h2>
                         <i class="fa-solid fa-chart-line"></i>
                     </div>
                     <ul class="carte_pop">
